--- a/app/src/main/res/layout/activity_facultysysedit.xml
+++ b/app/src/main/res/layout/activity_facultysysedit.xml
@@ -114,6 +114,30 @@
         android:textColorHint="@color/white"
         android:textColorHighlight="@color/white"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Replacement Type : "
+        android:textColor="@color/white"
+        android:textSize="20dp"/>
+
+    <Spinner
+        android:textSize="15dp"
+        android:textColor="#FFF"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="60dp"
+        android:id="@+id/replacement"/>
+
+    </LinearLayout>
+
+
+
     <ListView
         android:visibility="gone"
         android:paddingTop="10dp"
