--- a/app/src/main/res/layout/activity_lab.xml
+++ b/app/src/main/res/layout/activity_lab.xml
@@ -19,24 +19,185 @@
         android:textSize="25dp"
         android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/labadd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shapelogin"
-            android:layout_marginBottom="30dp"
-            android:padding="15dp"
-            android:shadowColor="@android:color/transparent"
-            android:text="Add Lab System" />
+    <GridLayout
+        android:id="@+id/grid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:rowCount="2"
+        android:columnCount="2">
 
-        <Button
-            android:id="@+id/labsystem"
-            android:layout_width="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv00"
+            android:layout_width="80dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:alpha="0.8"
+            android:layout_height="110dp"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="8dp"
+            app:cardCornerRadius="8dp"
+            android:elevation="8dp"
+            android:layout_gravity="fill">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:orientation="vertical"
+                android:alpha="0.8"
+                android:gravity="center"
+                android:background="@drawable/systemreq"
+                android:layout_gravity="center_vertical|center_horizontal">
+                <TextView
+                    android:id="@+id/gsystem"
+                    android:background="#00000000"
+                    android:layout_width="match_parent"
+                    android:layout_height="110dp"
+                    android:gravity="center"
+                    android:textSize="18dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:text="SYSTEM DETAILS" />
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv01"
+            android:layout_width="80dp"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:alpha="0.8"
+            android:layout_height="110dp"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="8dp"
+            app:cardCornerRadius="8dp"
+            android:elevation="8dp"
+            android:layout_gravity="fill">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:orientation="vertical"
+                android:alpha="0.8"
+                android:gravity="center"
+                android:background="@drawable/servicereq"
+                android:layout_gravity="center_vertical|center_horizontal">
+                <TextView
+                    android:id="@+id/gservice"
+                    android:background="#00000000"
+                    android:layout_width="match_parent"
+                    android:layout_height="110dp"
+                    android:gravity="center"
+                    android:textSize="18dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:text="SERVICE DETAILS" />
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="80dp"
+            android:id="@+id/alphasystem"
+            android:alpha="0"
+            android:layout_row="1"
+            android:layout_column="0"
             android:layout_height="wrap_content"
-            android:background="@drawable/shapelogin"
-            android:padding="15dp"
-            android:shadowColor="@android:color/transparent"
-            android:text="View System Details" />
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="8dp"
+            app:cardCornerRadius="8dp"
+            android:elevation="8dp"
+            android:layout_gravity="fill">
+
+            <LinearLayout
+                android:id="@+id/expandableview1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:visibility="gone"
+                android:background="@color/light_green"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/labadd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shapelogin"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:padding="15dp"
+                    android:shadowColor="@android:color/transparent"
+                    android:text="Add Lab System" />
+
+                <Button
+                    android:id="@+id/labsystem"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shapelogin"
+                    android:padding="15dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:shadowColor="@android:color/transparent"
+                    android:text="View System Details" />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="80dp"
+            android:id="@+id/alphaservice"
+            android:alpha="0"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_height="wrap_content"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="8dp"
+            app:cardCornerRadius="8dp"
+            android:elevation="8dp"
+            android:layout_gravity="fill">
+
+            <LinearLayout
+                android:id="@+id/expandableview2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:visibility="gone"
+                android:background="@color/light_green"
+                android:orientation="vertical">
+                <Button
+                    android:id="@+id/labservice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shapelogin"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:padding="15dp"
+                    android:shadowColor="@android:color/transparent"
+                    android:text="System Service" />
+
+                <Button
+                    android:id="@+id/labserviceview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shapelogin"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:padding="15dp"
+                    android:shadowColor="@android:color/transparent"
+                    android:text="View all Services" />
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+    </GridLayout>
 
 
 </LinearLayout>
