--- a/app/src/main/res/layout/activity_labservice.xml
+++ b/app/src/main/res/layout/activity_labservice.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/gradient2"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".stockentry">
+    tools:context=".labservice">
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,14 +16,28 @@
         android:textColor="#FFF"
         android:textStyle="bold"
         android:layout_marginBottom="20dp"
-        android:text="STOCK ENTRY"/>
-
+        android:text="LAB SYSTEM SERVICE"/>
     <ImageView
         android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:src="@mipmap/ic_launcher"/>
 
+    <EditText
+        android:id="@+id/id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/shapeemail"
+        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
+        android:drawablePadding="10dp"
+        android:hint="ID"
+        android:imeOptions="actionNext"
+        android:padding="15dp"
+        android:singleLine="true"
+        android:textColor="@color/white"
+        android:textColorHighlight="@color/white"
+        android:textColorHint="@color/white" />
     <EditText
         android:id="@+id/type"
         android:layout_width="match_parent"
@@ -41,20 +55,20 @@
         android:textColorHint="@color/white" />
 
     <EditText
-        android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@drawable/shapeemail"
-        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
-        android:drawablePadding="10dp"
-        android:hint="Name"
-        android:imeOptions="actionNext"
         android:padding="15dp"
         android:singleLine="true"
+        android:imeOptions="actionNext"
+        android:background="@drawable/shapeemail"
+        android:drawableLeft="@drawable/ic_baseline_person_24"
+        android:drawablePadding="10dp"
+        android:hint="Name"
+        android:id="@+id/name"
         android:textColor="@color/white"
-        android:textColorHighlight="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/white"
+        android:textColorHighlight="@color/white"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -64,10 +78,10 @@
         android:singleLine="true"
         android:imeOptions="actionDone"
         android:background="@drawable/shapeemail"
-        android:drawableLeft="@drawable/ic_baseline_confirmation_number_24"
+        android:drawableLeft="@drawable/ic_baseline_search_24"
         android:drawablePadding="10dp"
-        android:hint="Quantity"
-        android:id="@+id/quantity"
+        android:hint="Remarks"
+        android:id="@+id/remarks"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textColorHighlight="@color/white"/>
@@ -84,8 +98,6 @@
         android:text="SUBMIT"
         android:shadowColor="@android:color/transparent"
         android:padding="15dp"
-        android:imeOptions="actionDone"
-        android:inputType="phone"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginBottom="10dp"
