--- a/app/src/main/res/layout/activity_labsysedit.xml
+++ b/app/src/main/res/layout/activity_labsysedit.xml
@@ -47,12 +47,28 @@
         android:drawableLeft="@drawable/ic_baseline_person_outline_24"
         android:drawablePadding="10dp"
         android:hint="Lab"
-        android:imeOptions="actionNext"
+        android:imeOptions="actionDone"
         android:padding="15dp"
         android:singleLine="true"
         android:textColor="@color/white"
         android:textColorHighlight="@color/white"
         android:textColorHint="@color/white" />
+
+
+    <TextView
+        android:id="@+id/dept"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/shapeemail"
+        android:drawableLeft="@drawable/ic_baseline_person_24"
+        android:drawablePadding="10dp"
+        android:hint="Department"
+        android:padding="15dp"
+        android:textColor="@color/white"
+        android:textColorHighlight="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="18dp" />
 
     <TextView
         android:id="@+id/monitor"
@@ -114,6 +130,36 @@
         android:textColorHint="@color/white"
         android:textColorHighlight="@color/white"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Replacement Type : "
+            android:textColor="@color/white"
+            android:textSize="20dp"/>
+
+        <Spinner
+            android:textSize="15dp"
+            android:textColor="#FFF"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"
+            android:id="@+id/replacement"/>
+
+    </LinearLayout>
+    <ListView
+        android:visibility="gone"
+        android:paddingTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:id="@+id/listviewdept"
+        android:layout_weight="100"/>
+
+
     <ListView
         android:visibility="gone"
         android:paddingTop="10dp"
@@ -146,6 +192,7 @@
         android:layout_height="40dp"
         android:id="@+id/listviewmouse"
         android:layout_weight="100"/>
+
 
     <ProgressBar
         android:id="@+id/progress"
