--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:background="@drawable/gradient2"
     android:orientation="vertical"
     tools:context=".service">
@@ -26,22 +27,72 @@
         android:layout_height="wrap_content"
         android:visibility="gone" />
 
-    <EditText
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:padding="15dp"
-        android:singleLine="true"
-        android:imeOptions="actionDone"
-        android:background="@drawable/shapeemail"
-        android:drawableLeft="@drawable/ic_baseline_search_24"
-        android:drawablePadding="10dp"
-        android:hint="Search"
-        android:id="@+id/search"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textColorHighlight="@color/white"/>
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:weightSum="1">
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:padding="15dp"
+            android:singleLine="true"
+            android:imeOptions="actionDone"
+            android:background="@drawable/shapeemail"
+            android:drawableLeft="@drawable/ic_baseline_search_24"
+            android:drawablePadding="10dp"
+            android:hint="Search"
+            android:id="@+id/search"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:layout_weight="0.8"
+            android:textColorHighlight="@color/white"/>
 
+        <ImageView
+            android:id="@+id/filter"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/ic_baseline_filter_list_24"
+            android:layout_weight="0.2"
+            android:scaleType="centerCrop"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/filter1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
+        <TextView
+            android:textSize="15dp"
+            android:textColor="#FFF"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Done/Pending : "/>
+        <Spinner
+            android:layout_marginLeft="50dp"
+            android:textSize="15dp"
+            android:textColor="#FFF"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/dpspinner"/>
+
+    </LinearLayout>
+
+
+    <Button
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Apply"
+        android:layout_marginBottom="5dp"
+        android:id="@+id/apply"/>
 
     <View
         android:layout_width="match_parent"
