--- a/app/src/main/res/layout/activity_stafflogin.xml
+++ b/app/src/main/res/layout/activity_stafflogin.xml
@@ -20,56 +20,282 @@
         android:layout_marginBottom="20dp" />
 
 
-    <Button
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
+
+    <GridLayout
+        android:id="@+id/grid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Service Request"
-        android:shadowColor="@android:color/transparent"
-        android:padding="15dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="30dp"
-        android:id="@+id/service"
-        android:background="@drawable/shapelogin" />
+        android:layout_marginTop="20dp"
+        android:rowCount="2"
+        android:columnCount="2">
 
-    <Button
-        android:layout_width="match_parent"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv00"
+            android:layout_width="80dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:alpha="0.8"
+            android:layout_height="110dp"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="8dp"
+            app:cardCornerRadius="8dp"
+            android:elevation="8dp"
+            android:layout_gravity="fill">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:orientation="vertical"
+                android:alpha="0.8"
+                android:gravity="center"
+                android:background="@drawable/servicereq"
+                android:layout_gravity="center_vertical|center_horizontal">
+                <TextView
+                    android:id="@+id/gservice"
+                    android:background="#00000000"
+                    android:layout_width="match_parent"
+                    android:layout_height="110dp"
+                    android:gravity="center"
+                    android:textSize="18dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:text="SERVICE REQUEST" />
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv01"
+            android:layout_width="80dp"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:alpha="0.8"
+            android:layout_height="110dp"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="8dp"
+            app:cardCornerRadius="8dp"
+            android:elevation="8dp"
+            android:layout_gravity="fill">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:orientation="vertical"
+                android:alpha="0.8"
+                android:gravity="center"
+                android:background="@drawable/systemreq"
+                android:layout_gravity="center_vertical|center_horizontal">
+                <TextView
+                    android:id="@+id/gsystem"
+                    android:background="#00000000"
+                    android:layout_width="match_parent"
+                    android:layout_height="110dp"
+                    android:gravity="center"
+                    android:textSize="18dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:text="SYSTEM REQUEST"/>
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="80dp"
+            android:id="@+id/alphaservicerequest"
+            android:alpha="0"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_height="wrap_content"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="8dp"
+            app:cardCornerRadius="8dp"
+            android:elevation="8dp"
+            android:layout_gravity="fill">
+
+            <LinearLayout
+                android:id="@+id/expandableview1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:visibility="gone"
+                android:background="@color/light_green"
+                android:orientation="vertical">
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Service Request"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:shadowColor="@android:color/transparent"
+                    android:padding="15dp"
+                    android:id="@+id/service"
+                    android:background="@drawable/shapelogin" />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:text="View All Service request"
+                    android:shadowColor="@android:color/transparent"
+                    android:padding="15dp"
+                    android:id="@+id/allservice"
+                    android:background="@drawable/shapelogin" />
+
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="80dp"
+            android:id="@+id/alphasystemrequest"
+            android:alpha="0"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_height="wrap_content"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="8dp"
+            app:cardCornerRadius="8dp"
+            android:elevation="8dp"
+            android:layout_gravity="fill">
+
+            <LinearLayout
+                android:id="@+id/expandableview2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:visibility="gone"
+                android:background="@color/light_green"
+                android:orientation="vertical">
+
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="System Request"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:shadowColor="@android:color/transparent"
+                    android:padding="15dp"
+                    android:id="@+id/sysreq"
+                    android:background="@drawable/shapelogin" />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="View All SYSTEM REQUESTS"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:shadowColor="@android:color/transparent"
+                    android:padding="15dp"
+                    android:id="@+id/allsysreq"
+                    android:background="@drawable/shapelogin" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+    </GridLayout>
+
+    <GridLayout
+        android:id="@+id/grid1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="System Request"
-        android:shadowColor="@android:color/transparent"
-        android:padding="15dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="30dp"
-        android:id="@+id/sysreq"
-        android:background="@drawable/shapelogin" />
+        android:rowCount="2"
+        android:columnCount="1">
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv20"
+            android:layout_width="200dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:alpha="0.8"
+            android:layout_height="110dp"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="8dp"
+            app:cardCornerRadius="8dp"
+            android:elevation="8dp"
+            android:layout_gravity="fill">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="View All Service request"
-        android:shadowColor="@android:color/transparent"
-        android:padding="15dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="30dp"
-        android:id="@+id/allservice"
-        android:background="@drawable/shapelogin" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:orientation="vertical"
+                android:alpha="0.8"
+                android:gravity="center"
+                android:background="@drawable/editaccount"
+                android:layout_gravity="center_vertical|center_horizontal">
+                <TextView
+                    android:id="@+id/geditacc"
+                    android:background="#00000000"
+                    android:layout_width="match_parent"
+                    android:layout_height="110dp"
+                    android:gravity="center"
+                    android:textSize="18dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:text="EDIT PERSONAL INFO" />
+            </LinearLayout>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="View All SYSTEM REQUESTS"
-        android:shadowColor="@android:color/transparent"
-        android:padding="15dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="30dp"
-        android:id="@+id/allsysreq"
-        android:background="@drawable/shapelogin" />
+        </androidx.cardview.widget.CardView>
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="80dp"
+            android:id="@+id/alphaeditacc"
+            android:alpha="0"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_height="wrap_content"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="8dp"
+            app:cardCornerRadius="8dp"
+            android:elevation="8dp"
+            android:layout_gravity="fill">
+
+            <LinearLayout
+                android:id="@+id/expandableview3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:visibility="gone"
+                android:background="@color/light_green"
+                android:orientation="vertical">
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="EDIT DETAILS"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:shadowColor="@android:color/transparent"
+                    android:padding="15dp"
+                    android:id="@+id/editacc"
+                    android:background="@drawable/shapelogin" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+    </GridLayout>
 </LinearLayout>
