--- a/app/src/main/res/layout/cardview3.xml
+++ b/app/src/main/res/layout/cardview3.xml
@@ -145,6 +145,14 @@
             android:text="edit"
             android:textSize="18dp" />
 
+        <Button
+            android:id="@+id/delete"
+            android:layout_marginLeft="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="delete"
+            android:textSize="18dp" />
+
     </LinearLayout>
     <View
         android:layout_marginTop="5dp"
