--- a/app/src/main/res/layout/cardview4.xml
+++ b/app/src/main/res/layout/cardview4.xml
@@ -49,15 +49,16 @@
                 android:textSize="18dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="STATUS"
+                android:text="REASON"
                 android:textColor="@color/yellow_orange" />
 
             <TextView
                 android:textSize="18dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="DATE AND TIME"
+                android:text="STATUS"
                 android:textColor="@color/yellow_orange" />
+
 
         </LinearLayout>
 
@@ -97,6 +98,15 @@
 
             <TextView
                 android:textSize="18dp"
+                android:id="@+id/reason"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="remarks"
+                android:textColor="@color/colorAccent"
+                android:textStyle="bold" />
+
+            <TextView
+                android:textSize="18dp"
                 android:id="@+id/status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -104,14 +114,6 @@
                 android:textColor="@color/colorAccent"
                 android:textStyle="bold" />
 
-            <TextView
-                android:textSize="18dp"
-                android:id="@+id/dateandtime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="date and time"
-                android:textColor="@color/colorAccent"
-                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
 
@@ -134,7 +136,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:text="cancel"
+            android:text="REJECT"
             android:textSize="18dp" />
 
     </LinearLayout>
